--- a/eshop_docker/eshop/requirements.txt
+++ b/eshop_docker/eshop/requirements.txt
@@ -77,6 +77,7 @@ tablib==1.1.0
 unicodecsv==0.14.1
 uritemplate==3.0.1
 urllib3==1.25.9
+uwsgi==2.0.19.1
 vine==1.3.0
 xlrd==1.2.0
 XlsxWriter==1.2.8
